tests/compile-fail/integration_suite__integration__ecl_features__eosd_exported_fn_const_fn_name_clash.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: redefinition of function 'name'
  ┌─ <input>:8:16
  │
7 │     void name() {}
  │          ---- originally defined here
8 │     const void name() {}
  │                ^^^^ redefinition of function


